--- a/app/views/kanban/export.html.erb
+++ b/app/views/kanban/export.html.erb
@@ -1,15 +1,6 @@
 <html>
 <head>
-  <style type="text/css">
-    .issue {
-      display: inline-block;
-      float: left;
-      height: 180px;
-      width: 120px;
-      padding: 20px 50px;
-      border: 1px solid #ccc;
-    }
-  </style>
+    <%= stylesheet_link_tag "kanban", :plugin => "kanban" %>
 </head>
 <body>
   <% @issues.each do |issue| %>
